Fix spacing in #languageTable
- Closes #303

--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,7 @@ dd.languageList {
   margin-bottom: 5px;
 }
 #language_playAll {vertical-align: middle;}
+#languageTable {table-layout: fixed;}
 #contributorGroup .dropdown-menu{
   min-width: 300px;
   max-width: 600px;
